# adyant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: publish.yml
.github/workflows/: publish.yml
adyant/: __init__.py  cli.py  domains.py  expand.py  keywords.json  learn.py  model.py  modes.py  synonyms.py  tokens.py
tests/: test_all.py
