[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adyant"
version = "1.0.1"
description = "Markov chain URL wordlist generator for security research and fuzzing pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["fuzzing", "security", "url", "wordlist", "markov", "recon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []   # zero required deps — crawl is optional

[project.optional-dependencies]
crawl = ["requests>=2.28", "beautifulsoup4>=4.11"]
dev   = ["pytest", "build", "twine"]

[project.scripts]
adyant = "adyant.cli:main"

[project.urls]
Homepage = "https://github.com/forshaur/adyant"

[tool.setuptools.packages.find]
where = ["."]
include = ["adyant*"]
[tool.setuptools]
package-data = {"adyant" = ["*.json"]}
